refreshed all files

--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -8,7 +8,7 @@
       <h2><%= state.name %></h2>
       <p><%= state.phrase %></p>
     </div>
-    <div class="card-body">
+    <div class="card-body ">
       <h5 class="card-title">Specialities</h5>
       <ul>
         <% state.speciality.forEach(function(item) { %>
@@ -24,7 +24,7 @@
       <p>Empire: <%= state.history.ecto %></p>
       <p>Art & Heritage: <%= state.history.artH %></p>
       <h5 class="card-title">Culture</h5>
-      <p>Main Dish: <%= state.HnC.MnD.join(', ') %></p>
+      <p>Music and Dance: <%= state.HnC.MnD.join(', ') %></p>
       <p>Attire: <%= state.HnC.attire %></p>
       <p>Festivals: <%= state.HnC.festivals.join(', ') %></p>
       <p>Folk Tales: <%= state.HnC.folkTales.join(', ') %></p>
@@ -32,11 +32,10 @@
       <p>Lifestyle: <%= state.HnC.lifeStyle.join(', ') %></p>
       <h5 class="card-title">Images</h5>
       <% state.image.forEach(function(image) { %>
-      <p><%= image.file_name %></p>
       <img
-        src="<%= image.img_url %>"
-        class="img-fluid"
-        alt="<%= image.file_name %>"
+        src="<%= image.imgUrl %>"
+        class="img-fluid img-thumbnail w-25 h-50"
+        alt="<%= image.filename %>"
       />
       <% }); %>
     </div>
