--- a/views/cities/index.ejs
+++ b/views/cities/index.ejs
@@ -6,7 +6,7 @@
     <% for(city of citiesList) {%>
            <h2><%= city.name  %> </h2>
            <p> <%= city.description %> </p>
-           <a href="<%=route%>/<%= city._id %>"><button class="btn btn-danger"> Show more</button> </a>
+           <a href="<%=route%>/<%= city.croute %>"><button class="btn btn-danger"> Show more</button> </a>
            <br>
 
     
